fix alert z-index

--- a/assets/styles/elements.css
+++ b/assets/styles/elements.css
@@ -9,7 +9,7 @@
   left: 0;
   justify-content: space-around;
   align-items: center;
-  z-index: 10;
+  z-index: 11;
 }
 
 .alert--bg {
